Fix flexbox alignment issue (I hope)

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -387,6 +387,7 @@ nav {
 	flex-wrap: wrap;
 	justify-content: center;
 	.page-listing {
+		width: 150px;
 		margin: 0 15px;
 	}
 }
